--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ shuttle-secrets = "0.8.0"
 shuttle-service = { version = "0.8.0" }
 shuttle-shared-db = { version = "0.8.0", features = ["postgres"] }
 sqlx = { version = "0.6.2", features = ["postgres"] }
+roux = "1.3.7"
+roux-stream = "0.1.0"
+tracing = "0.1.37"
