--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ sqlx = { version = "0.6.2", features = ["postgres"] }
 roux = "1.3.7"
 roux-stream = "0.1.0"
 tracing = "0.1.37"
+anyhow = "1.0.68"
+tokio-retry = "0.3.0"
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.91"
