--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ anyhow = "1.0.68"
 tokio-retry = "0.3.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
+futures = "0.3.25"
