--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ tokio-retry = "0.3.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 futures = "0.3.25"
+distance = "0.4.0"
