--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 futures = "0.3.25"
 distance = "0.4.0"
+reqwest = "0.11.13"
