--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ serde_json = "1.0.91"
 futures = "0.3.25"
 distance = "0.4.0"
 reqwest = "0.11.13"
+time = { version = "0.3.17", features = ["serde-well-known"] }
